--- a/chapter5.tex
+++ b/chapter5.tex
@@ -249,45 +249,50 @@ struct Project {
 
 \paragraph{Investor Struct:}
 The investor struct stores individual investment details for tracking purposes.
-
+\newpage
 \subsubsection*{Mobile Payment Interface}
 
 The mobile application provides a seamless interface for investors to manage their blockchain-based transactions. Figure \ref{fig:mobile-payment-interface} demonstrates the complete mobile payment workflow including investment initiation, payment processing, and withdrawal functionality.
 
-\begin{figure}[htbp]
-    \centering
-    % Top row - three mobile interface images side by side
-    \begin{minipage}{0.32\textwidth}
-        \centering
-        % \includegraphics[width=\linewidth]{images/mobile_invest_interface.png}
-        \caption*{Investment Interface}
-    \end{minipage}
-    \hfill
-    \begin{minipage}{0.32\textwidth}
-        \centering
-        % \includegraphics[width=\linewidth]{images/mobile_payment_process.png}
-        \caption*{Payment Process}
-    \end{minipage}
-    \hfill
-    \begin{minipage}{0.32\textwidth}
-        \centering
-        % \includegraphics[width=\linewidth]{images/mobile_withdraw_interface.png}
-        \caption*{Withdrawal Interface}
-    \end{minipage}
-    \caption{Mobile Payment Interface: Investment, Payment, and Withdrawal Process}
-    \label{fig:mobile-payment-interface}
-\end{figure}
+% \begin{figure}[htbp]
+%     \centering
+%     % Three mobile interface images side by side
+%     \begin{subfigure}[b]{0.3\textwidth}
+%         \centering
+%         \includegraphics[width=\textwidth]{images/mobile_invest_interface.png}
+%         \caption{Investment Interface}
+%         \label{fig:mobile-invest}
+%     \end{subfigure}
+%     \hfill
+%     \begin{subfigure}[b]{0.3\textwidth}
+%         \centering
+%         \includegraphics[width=\textwidth]{images/mobile_payment_process.png}
+%         \caption{Payment Process}
+%         \label{fig:mobile-payment}
+%     \end{subfigure}
+%     \hfill
+%     \begin{subfigure}[b]{0.3\textwidth}
+%         \centering
+%         \includegraphics[width=\textwidth]{images/mobile_withdraw_interface.png}
+%         \caption{Withdrawal Interface}
+%         \label{fig:mobile-withdraw}
+%     \end{subfigure}
+%     \caption{Mobile Payment Interface: Investment, Payment, and Withdrawal Process}
+%     \label{fig:mobile-payment-interface}
+% \end{figure}
+
 
 \subsubsection*{Admin Blockchain Visualization}
 
 The super admin dashboard provides comprehensive visualization and management capabilities for blockchain smart contracts. Figure \ref{fig:admin-blockchain-visualization} shows the administrative interface for monitoring and managing blockchain transactions and smart contract interactions.
 
-\begin{figure}[htbp]
-    \centering
-    % \includegraphics[width=0.9\textwidth]{images/admin_blockchain_dashboard.png}
-    \caption{Super Admin Blockchain Smart Contract Visualization Dashboard}
-    \label{fig:admin-blockchain-visualization}
-\end{figure}
+% \begin{figure}[htbp]
+%     \centering
+%     \includegraphics[width=0.8\textwidth]{images/admin_blockchain_dashboard.png}
+%     \caption{Super Admin Blockchain Smart Contract Visualization Dashboard}
+%     \label{fig:admin-blockchain-visualization}
+% \end{figure}
+% \newpage
 
 \subsection{Test}
 \subsubsection{Transaction Flow Testing}
